<resources>
    <string name="app_name">Xandria Delivery</string>
    <string name="reg_string">Already Registered? Login Here</string>
    <string name="register">Register</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="xandria">Xandria</string>
    <string name="contact">Contact</string>
    <string name="login">Login</string>
    <string name="reg_text">New User? Register Here</string>
    <string name="reset_text">Forgot password? Reset Here</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="password_reset_email_instructions">You will receive password reset instructions in the email</string>
    <string name="confirm">Confirm</string>
    <string name="GPSAlertDialogTitle">Allow Location Access</string>
    <string name="GPSAlertDialogMessage">This app uses location permissions to get books near you</string>
    <string name="action_settings">OK</string>
    <string name="cancel">Cancel</string>
    <string name="unpicked">Unpicked</string>
    <string name="picked">Picked</string>
    <string name="completed">Done</string>
    <string name="pending">Pending</string>
    <string name="book_image">Book Image</string>
    <string name="show_in_map">Show in map</string>
    <string name="select_for_delivery">Select for delivery</string>
    <string name="book_title"><![CDATA[<b>Book Title:</b>]]></string>
    <string name="date_ordered"><![CDATA[<b>Date Ordered:</b>]]></string>
    <string name="book_host"><![CDATA[<b>Book Host:</b>]]></string>
    <string name="drop_contact"><![CDATA[<b>Drop Contact:</b>]]></string>
    <string name="booked_by"><![CDATA[<b>Booked by:</b>]]></string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="nav_open_drawer">Open Navigation  Drawer</string>
    <string name="nav_close_drawer">Close Navigation Drawer</string>
    <string name="name"><![CDATA[<b>Name:</b>]]></string>
    <string name="points"><![CDATA[<b>Points:</b>]]></string>
    <string name="welcome">Welcome</string>
    <string name="logo">Logo</string>
    <string name="account_profile">Account Profile</string>
    <string name="email"><![CDATA[<b>Email:</b>]]></string>
    <string name="phone"><![CDATA[<b>Phone:</b>]]></string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="password">Password</string>
</resources>