<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home"
            android:checked="true"/>

        <item
            android:id="@+id/nav_pending"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_pending_actions_24"
            android:title="@string/pending"
            android:checked="true"/>

        <item
            android:id="@+id/nav_completed"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_done_all_24"
            android:title="@string/completed"
            android:checked="true" />

    </group>

    <item android:title="@string/account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="@string/profile"/>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>
</menu>