<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/XandriaLogo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.7"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                app:fontFamily="@font/major_mono_display" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/play"
                android:text="@string/account_profile"
                android:gravity="start"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/play"
                android:id="@+id/display_username"
                android:text="@string/name"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/play"
                android:id="@+id/display_email"
                android:text="@string/email"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/play"
                android:id="@+id/display_phone"
                android:text="@string/phone"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/play"
                android:id="@+id/display_points"
                android:text="@string/points"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/reset_password"
            android:background="@drawable/custom_button_background"
            android:fontFamily="@font/play"
            app:backgroundTint="@null"
            android:text="@string/reset_password"
            android:textColor="@color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/logout_btn"
            android:background="@drawable/custom_button_background"
            android:fontFamily="@font/play"
            app:backgroundTint="@null"
            android:text="@string/sign_out"
            android:textColor="@color/black" />
    </LinearLayout>
</FrameLayout>