<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/custom_border"
    android:backgroundTint="@color/black"
    android:backgroundTintMode="screen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_verification_code"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verification_code_input"
        android:hint="@string/verification_code"
        android:autofillHints="smsOTPCode"
        android:importantForAutofill="yes"
        android:inputType="text"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/verify_btn"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button_background"
        app:backgroundTint="@null"
        android:layout_margin="10dp"
        android:text="@string/verify"
        android:textColor="@color/black"/>
</LinearLayout>