<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.user.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/head_section_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginEmailInputLayout"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            android:hint="@string/enter_your_email"
            style="@style/TextInputLayout"
            android:padding="5dp"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white" >
            <com.google.android.material.textfield.TextInputEditText
                android:fontFamily="@font/play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginEmail"
                android:importantForAutofill="no"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginPasswordInputLayout"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_password"
            style="@style/TextInputLayout"
            android:padding="5dp"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white" >
            <com.google.android.material.textfield.TextInputEditText
                android:fontFamily="@font/play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginPassword"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/LoginBtn"
            android:background="@drawable/custom_button_background"
            android:fontFamily="@font/play"
            android:text="@string/login"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_text"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:id="@+id/RegisterTextBtn"
            android:layout_marginTop="15dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_text"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:id="@+id/reset_password_txt"
            android:layout_marginTop="15dp"
            android:textAlignment="center"/>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loadingPB"
            android:indeterminate="true"
            android:layout_gravity="center_horizontal"
            android:indeterminateDrawable="@drawable/progressbar"
            android:visibility="gone"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>